--- a/Pos/res/layout/remove_layout.xml
+++ b/Pos/res/layout/remove_layout.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Product code"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/text_color" />
 
     <EditText
         android:id="@+id/pc_text"
@@ -31,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OK" 
-            android:textColor="#FFFFFF"
+            android:textColor="@color/text_button_color"
             android:background="@drawable/greenbutton"/>
 
     </LinearLayout>
