--- a/Pos/res/layout/report_bill_lineitem.xml
+++ b/Pos/res/layout/report_bill_lineitem.xml
@@ -12,32 +12,36 @@
             android:id="@+id/sale_report_bill_lineitem_pc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/sale_report_bill_lineitem_priceperunit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/sale_report_bill_lineitem_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/sale_report_bill_lineitem_subtotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="฿" />
-
+            android:text="฿"
+            android:textColor="@color/text_color" />
     </LinearLayout>
 
 </LinearLayout>
