--- a/Pos/res/layout/sale_dialog.xml
+++ b/Pos/res/layout/sale_dialog.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/sale_dialogtextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@color/text_color" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +20,8 @@
             android:id="@+id/sale_dialog_nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quantity" />
+            android:text="Quantity"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/saleDialog_editText"
@@ -30,7 +32,6 @@
 
             <requestFocus />
         </EditText>
-
     </LinearLayout>
 
     <LinearLayout
@@ -44,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/greenbutton"
+            android:textColor="@color/text_button_color"
             android:text="OK" />
 
         <Button
@@ -52,8 +54,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/light_grey_button"
+            android:textColor="@color/text_button_color"
             android:text="Edit price" />
-
     </LinearLayout>
 
 </LinearLayout>
