--- a/Pos/res/layout/sale_dialog_discount.xml
+++ b/Pos/res/layout/sale_dialog_discount.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/sale_dialog_nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@color/text_color" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +20,8 @@
             android:id="@+id/sale_report_bill_lineitem_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quantity" />
+            android:text="Quantity"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/sale_dialog_quantityEditText"
@@ -30,7 +32,6 @@
 
             <requestFocus />
         </EditText>
-
     </LinearLayout>
 
     <LinearLayout
@@ -41,7 +42,8 @@
             android:id="@+id/sale_report_bill_lineitem_priceperunit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Price" />
+            android:text="Price"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/sale_dialog_priceEditText"
@@ -49,7 +51,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -63,8 +64,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/greenbutton"
+            android:textColor="@color/text_button_color"
             android:text="OK" />
-
     </LinearLayout>
 
 </LinearLayout>
