--- a/Pos/res/layout/sale_report_daily_lineitem.xml
+++ b/Pos/res/layout/sale_report_daily_lineitem.xml
@@ -12,8 +12,8 @@
             android:id="@+id/sale_report_daily_lineitem_idBill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
-
+            android:text="TextView"
+            android:textColor="@color/text_color" />
     </LinearLayout>
 
     <LinearLayout
@@ -25,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2.07"
-            android:textColor="#000000"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/sale_report_daily_lineitem_timee"
@@ -34,8 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="2.34"
             android:text="timee"
-            android:textColor="#000000"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/sale_report_daily_lineitem_totalprice"
@@ -43,8 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="2.65"
             android:text="Total Price"
-            android:textColor="#000000"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/report_bill_totalprice"
@@ -52,9 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="2.07"
             android:text="฿"
-            android:textColor="#000000"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/text_color" />
     </LinearLayout>
 
 </LinearLayout>
