--- a/Pos/res/layout/sale_report_list.xml
+++ b/Pos/res/layout/sale_report_list.xml
@@ -12,8 +12,8 @@
             android:id="@+id/sale_report_bill_lineitem_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="        " />
-
+            android:text="        "
+            android:textColor="@color/text_color" />
     </LinearLayout>
 
     <LinearLayout
@@ -25,21 +25,22 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="ProCode"
-            android:textColor="#000000"
+            android:textColor="@color/text_color"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/testnaeiei"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="         " />
+            android:text="         "
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/sale_report_bill_lineitem_quantity"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="Quantity:"
-            android:textColor="#000000"
+            android:textColor="@color/text_color"
             android:textSize="20sp" />
 
         <TextView
@@ -47,21 +48,22 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="Quan"
-            android:textColor="#000000"
+            android:textColor="@color/text_color"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/sale_report_bill_lineitem_priceperunit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="        " />
+            android:text="        "
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/sale_report_bill_lineitem_subtotal"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="Price:"
-            android:textColor="#000000"
+            android:textColor="@color/text_color"
             android:textSize="20sp" />
 
         <TextView
@@ -69,9 +71,8 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="Price"
-            android:textColor="#000000"
+            android:textColor="@color/text_color"
             android:textSize="20sp" />
-
     </LinearLayout>
 
 </LinearLayout>
