--- a/Pos/res/layout/inventory_report_lineitem.xml
+++ b/Pos/res/layout/inventory_report_lineitem.xml
@@ -10,7 +10,7 @@
 
         <TextView
             android:id="@+id/inventory_report_dateTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textColor="@color/text_color" />
@@ -29,23 +29,26 @@
 
         <TextView
             android:id="@+id/inventory_report_productTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Large Text"
+            android:textSize="25dp"
             android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/inventory_report_quantityTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Large Text"
+            android:textSize="25dp"
             android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/inventory_report_costTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Large Text"
+            android:textSize="25dp"
             android:textColor="@color/text_color" />
     </LinearLayout>
 
