--- a/Pos/res/layout/product_item.xml
+++ b/Pos/res/layout/product_item.xml
@@ -6,29 +6,47 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:orientation="vertical" >
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <TextView
+            android:id="@+id/product_item_textview_productcode"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_color" 
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text" />
+
+        <LinearLayout
+            android:layout_width="3dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/border_color" >
+        </LinearLayout>
+
+        <TextView
             android:id="@+id/product_itemName"
-            android:layout_width="370dp"
+            android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/text_color" />
+
+        <LinearLayout
+            android:layout_width="3dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/border_color" >
+        </LinearLayout>
 
         <TextView
             android:id="@+id/product_itemQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
+            android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/text_color" />
+
+
+
     </LinearLayout>
 
 </LinearLayout>
