--- a/Pos/res/layout/product_tab.xml
+++ b/Pos/res/layout/product_tab.xml
@@ -15,22 +15,79 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="3dp"
+		android:background="@drawable/border_color" >
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/sale_report_productTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:textSize="25dp"
+            android:text="Code"
             android:textColor="@color/text_color" />
 
+        <LinearLayout
+            android:layout_width="3dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical" 
+            android:background="@drawable/border_color">
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/product_item_textview_productcode"
+            android:layout_width="198dp"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textSize="25dp"
+            android:textColor="@color/text_color" />
+
+        <LinearLayout
+            android:layout_width="3dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/border_color" >
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:text="Quantity"
+            android:textColor="@color/text_color"
+            android:textSize="25dp" />
+
+        <LinearLayout
+            android:layout_width="3dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/border_color" >
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_color"
+            android:textSize="25dp"
+            android:text="Price" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@drawable/border_color" >
     </LinearLayout>
 
     <ListView
         android:id="@+id/product_listView"
         android:layout_width="match_parent"
-        android:layout_height="390dp" >
+        android:layout_height="match_parent"
+        android:layout_weight="0.70" >
     </ListView>
 
     <LinearLayout
@@ -40,8 +97,9 @@
 
         <Button
             android:id="@+id/product_addButton"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.33"
             android:background="@drawable/greenbutton"
             android:textColor="@color/text_button_color"
             android:text="Add" />
@@ -54,8 +112,9 @@
 
         <Button
             android:id="@+id/product_removeButton"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.33"
             android:background="@drawable/red_button"
             android:textColor="@color/text_button_color"
             android:text="Remove" />
@@ -68,8 +127,9 @@
 
         <Button
             android:id="@+id/product_editButton"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.33"
             android:background="@drawable/light_grey_button"
             android:textColor="@color/text_button_color"
             android:text="Edit" />
