--- a/Pos/res/layout/sale_report_choose_monthly.xml
+++ b/Pos/res/layout/sale_report_choose_monthly.xml
@@ -2,25 +2,65 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/background" >
+    android:background="@drawable/background"
+    android:gravity="center_horizontal|center_vertical"
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center" >
+
+        <TextView
+            android:id="@+id/product_item_textview_productcode"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:textColor="@color/text_color"
+            android:text="Year" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_color"
+            android:textSize="30dp"
+            android:text=" : " />
+
+        <Spinner
+            android:id="@+id/report_monthlySpinner_year"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
 -
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="center" >
 
-        <Spinner
-            android:id="@+id/report_monthlySpinner_year"
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:textColor="@color/text_color"
+            android:text="Month" />
+
+        <TextView
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+			android:textSize="30dp"
+			android:textColor="@color/text_color"
+            android:text=" : " />
 
         <Spinner
             android:id="@+id/report_monthlySpinner_month"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_width="120dp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 -
 
