--- a/Pos/res/layout/sale_report_list.xml
+++ b/Pos/res/layout/sale_report_list.xml
@@ -9,67 +9,37 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/sale_report_bill_lineitem_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="        "
-            android:textColor="@color/text_color" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
             android:id="@+id/sale_report_productTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
             android:text="ProCode"
             android:textColor="@color/text_color"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/testnaeiei"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="         "
-            android:textColor="@color/text_color" />
-
-        <TextView
-            android:id="@+id/sale_report_bill_lineitem_quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="Quantity:"
-            android:textColor="@color/text_color"
-            android:textSize="20sp" />
+        <LinearLayout
+            android:layout_width="3dp"
+            android:layout_height="match_parent" 
+            android:background="@drawable/border_color">
+        </LinearLayout>
 
         <TextView
             android:id="@+id/sale_report_quantityTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
             android:text="Quan"
             android:textColor="@color/text_color"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/sale_report_bill_lineitem_priceperunit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="        "
-            android:textColor="@color/text_color" />
-
-        <TextView
-            android:id="@+id/sale_report_bill_lineitem_subtotal"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="Price:"
-            android:textColor="@color/text_color"
-            android:textSize="20sp" />
+        <LinearLayout
+            android:layout_width="3dp"
+            android:layout_height="match_parent" 
+            android:background="@drawable/border_color">
+        </LinearLayout>
 
         <TextView
             android:id="@+id/sale_report_priceTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
             android:text="Price"
             android:textColor="@color/text_color"
             android:textSize="20sp" />
