--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -11,6 +11,75 @@
         android:background="@drawable/background"
         android:orientation="vertical" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@drawable/border_color" >
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/tamp_textView"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:text="Code"
+                android:textColor="@color/text_color"
+                android:textSize="25dp" />
+
+            <LinearLayout
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/border_color"
+                android:orientation="vertical" >
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/product_item_textview_productcode"
+                android:layout_width="198dp"
+                android:layout_height="wrap_content"
+                android:text="Name"
+                android:textColor="@color/text_color"
+                android:textSize="25dp" />
+
+            <LinearLayout
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/border_color" >
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:text="Quantity"
+                android:textColor="@color/text_color"
+                android:textSize="25dp" />
+
+            <LinearLayout
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/border_color" >
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:text="Price"
+                android:textColor="@color/text_color"
+                android:textSize="25dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@drawable/border_color" >
+        </LinearLayout>
+
         <ListView
             android:id="@+id/inventory_listView"
             android:layout_width="fill_parent"
@@ -56,7 +125,7 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/product_item_textview_productcode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Total Price"
