--- a/Pos/res/layout/inventory_tab.xml
+++ b/Pos/res/layout/inventory_tab.xml
@@ -14,7 +14,8 @@
         <EditText
             android:id="@+id/inventory_editText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.31"
             android:ems="10" >
 
             <requestFocus />
@@ -28,29 +29,32 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="match_parent"
+            android:layout_weight="0.31" >
 
             <TextView
                 android:id="@+id/product_item_textview_productcode"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight=".39"
                 android:text="Code"
-                android:textColor="@color/text_color"
-                android:textSize="25dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/text_color" />
 
             <LinearLayout
                 android:layout_width="3dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/border_color" >
+	                android:layout_height="match_parent"
+	                android:background="@drawable/border_color" >
             </LinearLayout>
 
             <TextView
                 android:id="@+id/textView1"
-                android:layout_width="270dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight=".25"
                 android:text="Name"
-                android:textColor="@color/text_color"
-                android:textSize="25dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/text_color" />
 
             <LinearLayout
                 android:layout_width="3dp"
@@ -60,11 +64,13 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight=".35"
                 android:text="Quantity"
-                android:textColor="@color/text_color"
-                android:textSize="25dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/text_color" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -75,36 +81,31 @@
 
         <ListView
             android:id="@+id/inventory_listView"
-            android:layout_width="fill_parent"
-            android:layout_weight="0.75"
-            android:layout_height="match_parent" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.08" >
+
         </ListView>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight=".30"
             android:gravity="right" >
 
             <Button
                 android:id="@+id/Inventort_Tab_Edit_Button"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
+                android:layout_weight=".33"
                 android:background="@drawable/greenbutton"
-                android:text="Add"
+                android:text="Add QTY"
                 android:textColor="@color/text_button_color" />
 
             <LinearLayout
                 android:layout_width="4dp"
                 android:layout_height="match_parent" >
             </LinearLayout>
-
-            <Button
-                android:id="@+id/set_quantity_ok_button"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/red_button"
-                android:text="Remove"
-                android:textColor="@color/text_button_color" />
 
             <LinearLayout
                 android:layout_width="4dp"
@@ -115,9 +116,11 @@
                 android:id="@+id/Inventort_Tab_reportButton"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
+                android:layout_weight=".33"
                 android:background="@drawable/report_button"
-                android:text="Report"
+                android:text="Inv Report"
                 android:textColor="@color/text_button_color" />
+
         </LinearLayout>
     </LinearLayout>
 
