--- a/Pos/res/layout/large_item_layout.xml
+++ b/Pos/res/layout/large_item_layout.xml
@@ -1,79 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:weightSum="1" >
+
+    <TextView
+        android:id="@+id/large_item_layout_product_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.20"
+        android:text="code"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/text_color" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/large_item_layout_product_code"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="code"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/text_color"
-            android:textColorHint="#000000"
-            android:textColorLink="#000000" />
-
-        <LinearLayout
-            android:layout_width="3dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical" 
-            android:background="@drawable/border_color">
-        </LinearLayout>
-        
-        <TextView
-            android:id="@+id/large_text_item"
-            android:layout_width="198dp"
-            android:layout_height="wrap_content"
-            android:text="name"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/text_color"/>
-
-        <LinearLayout
-            android:layout_width="3dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical" 
-            android:background="@drawable/border_color">
-        </LinearLayout>
-        
-        <TextView
-            android:id="@+id/large_text_quantity"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="@color/text_color"
-            android:textColorHint="#000000"
-            android:textColorLink="#000000" />
-
-        <LinearLayout
-            android:layout_width="3dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical" 
-            android:background="@drawable/border_color">
-        </LinearLayout>
-        
-        <TextView
-            android:id="@+id/large_text_price"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/activity_vertical_margin"
-            android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/text_color" />
-
-        <TextView
-            android:id="@+id/product_item_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="฿"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/text_color" />
+        android:layout_width="3dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/border_color"
+        android:orientation="vertical" >
     </LinearLayout>
 
- 
+    <TextView
+        android:id="@+id/large_text_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.15"
+        android:text="name"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/text_color" />
+
+    <LinearLayout
+        android:layout_width="3dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/border_color"
+        android:orientation="vertical" >
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/large_text_quantity"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.21"
+        android:text="TextView"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/text_color"
+        android:textColorHint="#000000"
+        android:textColorLink="#000000" />
+
+    <LinearLayout
+        android:layout_width="3dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/border_color"
+        android:orientation="vertical"
+        android:textAppearance="?android:attr/textAppearanceMedium" >
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/large_text_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.20"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/text_color" />
+
+    <TextView
+        android:id="@+id/product_item_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.24"
+        android:text="฿"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/text_color" />
 
 </LinearLayout>
