--- a/Pos/res/layout/product_item.xml
+++ b/Pos/res/layout/product_item.xml
@@ -10,11 +10,12 @@
 
         <TextView
             android:id="@+id/product_item_textview_productcode"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_color" 
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text" />
+            android:layout_weight="0.39"
+            android:text="Large Text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
 
         <LinearLayout
             android:layout_width="3dp"
@@ -24,10 +25,11 @@
 
         <TextView
             android:id="@+id/product_itemName"
-            android:layout_width="270dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.25"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/text_color" />
 
         <LinearLayout
@@ -38,14 +40,13 @@
 
         <TextView
             android:id="@+id/product_itemQuantity"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Large Text"
+            android:layout_weight="0.35"
             android:gravity="center"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/text_color" />
-
-
 
     </LinearLayout>
 
