--- a/Pos/res/layout/product_iteminfo.xml
+++ b/Pos/res/layout/product_iteminfo.xml
@@ -11,19 +11,22 @@
 
         <TextView
             android:id="@+id/sale_report_productTextView"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="Product ID :"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/product_itemId"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="productCode"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -32,19 +35,22 @@
 
         <TextView
             android:id="@+id/sale_report_priceTextView"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="Name :"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/product_item_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="name"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -58,19 +64,22 @@
 
         <TextView
             android:id="@+id/sale_report_productTextView"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="Type :"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/product_item_type"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="type"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -79,19 +88,22 @@
 
         <TextView
             android:id="@+id/textView7"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="Price :"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/product_itemPrice"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="price"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -100,19 +112,22 @@
 
         <TextView
             android:id="@+id/TextView02"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="Barcode :"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/product_itemBarcode"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="barcode"
-            android:textColor="@color/text_color"
-            android:textSize="40dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_color" />
+
     </LinearLayout>
 
     <LinearLayout
