--- a/Pos/res/layout/product_tab.xml
+++ b/Pos/res/layout/product_tab.xml
@@ -26,9 +26,10 @@
 
         <TextView
             android:id="@+id/sale_report_productTextView"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25dp"
+            android:layout_weight="0.2"
+           android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Code"
             android:textColor="@color/text_color" />
 
@@ -41,10 +42,11 @@
 
         <TextView
             android:id="@+id/product_item_textview_productcode"
-            android:layout_width="198dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.15"
             android:text="Name"
-            android:textSize="25dp"
+           android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/text_color" />
 
         <LinearLayout
@@ -55,11 +57,12 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="130dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.21"
             android:text="Quantity"
             android:textColor="@color/text_color"
-            android:textSize="25dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <LinearLayout
             android:layout_width="3dp"
@@ -69,11 +72,19 @@
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="90dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.2"
             android:textColor="@color/text_color"
-            android:textSize="25dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Price" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.24"
+            android:text="" />
 
     </LinearLayout>
 
