--- a/Pos/res/layout/report_bill.xml
+++ b/Pos/res/layout/report_bill.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/text_color" />
     </LinearLayout>
 
@@ -60,11 +60,12 @@
 
         <TextView
             android:id="@+id/product_item_textview_productcode"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:layout_weight=".33"
+            android:text="Code"
             android:textColor="@color/text_color"
-            android:text="Code" />
+            android:textSize="30dp" />
 
         <LinearLayout
             android:layout_width="3dp"
@@ -74,11 +75,14 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:layout_weight=".33"
+            android:text="Quantity"
+             android:textAppearance="?android:attr/textAppearanceMedium"
+            
             android:textColor="@color/text_color"
-            android:text="Quantity" />
+            android:textSize="30dp" />
 
         <LinearLayout
             android:layout_width="3dp"
@@ -88,11 +92,13 @@
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:layout_weight=".33"
+            android:text="Price"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/text_color"
-            android:text="Price" />
+            android:textSize="30dp" />
 
     </LinearLayout>
 
@@ -105,7 +111,9 @@
     <ListView
         android:id="@+id/report_bill_listView"
         android:layout_width="match_parent"
-        android:layout_height="380dp" >
+        android:layout_height="match_parent"
+        android:layout_weight=".50" >
+
     </ListView>
 
     <LinearLayout
@@ -117,8 +125,9 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_color"
-            android:text="Total Price :  " />
+            android:text="Total Price :  "
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/report_bill_totalprice"
