--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -19,16 +19,18 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.47"
             android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/tamp_textView"
-                android:layout_width="110dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.195"
                 android:text="Code"
-                android:textColor="@color/text_color"
-                android:textSize="25dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/text_color" />
 
             <LinearLayout
                 android:layout_width="3dp"
@@ -39,11 +41,12 @@
 
             <TextView
                 android:id="@+id/product_item_textview_productcode"
-                android:layout_width="198dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.155"
                 android:text="Name"
-                android:textColor="@color/text_color"
-                android:textSize="25dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/text_color" />
 
             <LinearLayout
                 android:layout_width="3dp"
@@ -53,11 +56,12 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="130dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.21"
                 android:text="Quantity"
                 android:textColor="@color/text_color"
-                android:textSize="25dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <LinearLayout
                 android:layout_width="3dp"
@@ -67,11 +71,20 @@
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="90dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.2"
                 android:text="Price"
                 android:textColor="@color/text_color"
-                android:textSize="25dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.24"
+                android:text="" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -82,8 +95,9 @@
 
         <ListView
             android:id="@+id/inventory_listView"
-            android:layout_width="fill_parent"
-            android:layout_height="190dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.33"
             android:background="@drawable/sale_item_listview" >
         </ListView>
 
@@ -96,23 +110,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="0.20"
             android:gravity="right" >
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_weight="0.5"
                 android:orientation="vertical" >
 
-                <EditText
-                    android:id="@+id/sale_editText"
-                    android:layout_width="300dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10" />
+                    android:layout_weight="0.03" >
+
+                    <EditText
+                        android:id="@+id/sale_editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.95"
+                        android:ems="10" />
+
+                    <Button
+                        android:id="@+id/sale_scan_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.00005"
+                        android:text="Scan" />
+
+                </LinearLayout>
 
                 <ListView
                     android:id="@+id/listView2"
-                    android:layout_width="310dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="0.15"
                     android:background="@drawable/sale_item_listview" >
                 </ListView>
             </LinearLayout>
@@ -120,6 +152,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.5"
                 android:background="@drawable/sale_cash"
                 android:gravity="right"
                 android:orientation="vertical" >
@@ -161,14 +194,15 @@
                     android:orientation="vertical" >
 
                     <LinearLayout
-                        android:layout_width="240dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="clip_horizontal" >
 
                         <Button
                             android:id="@+id/productItem_add_button"
-                            android:layout_width="118dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="0.50"
                             android:background="@drawable/greenbutton"
                             android:text="OK"
                             android:textColor="@color/text_button_color" />
@@ -180,11 +214,13 @@
 
                         <Button
                             android:id="@+id/productItem_edit_button"
-                            android:layout_width="118dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="0.50"
                             android:background="@drawable/light_grey_button"
                             android:text="Reset"
                             android:textColor="@color/text_button_color" />
+
                     </LinearLayout>
 
                     <LinearLayout
@@ -199,7 +235,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/light_grey_button"
-                        android:text="Report"
+                        android:text="Sale Report"
                         android:textColor="@color/text_button_color" />
                 </LinearLayout>
             </LinearLayout>
